ui-tests/tests/ui/bad_value5.stderr
error: expected u32, but found `1.0`
 --> $DIR/bad_value5.rs:7:16
  |
7 |         eyas = 1.0,
  |                ^^^
