ui-tests/tests/ui/bad_value5.rs
// Copyright 2020 Oxide Computer Company

use testlib::annotation;

#[annotation {
    nested = {
        eyas = 1.0,
    }
}]
fn test() {}

fn main() {}
